--- a/index.html
+++ b/index.html
@@ -1909,6 +1909,212 @@
     </main>
 
     <!-- Footer - David -->
-    <footer></footer>
+    <footer>
+      <footer class="bg-white py-10 border-t border-gray-200">
+        <div class="container mx-auto px-4">
+            <!-- Inspiration for future getaways Section -->
+            <div class="mb-8 md:mb-0">
+                <h3 class="mb-4 font-semibold">Inspiration for future getaways</h3>
+                <div class="nav-container">
+                    <ul class="flex flex-col md:flex-row md:flex-wrap space-y-2 md:space-y-0 md:space-x-4">
+                        <li class="nav-item"><a href="#" class="text-black" onclick="showList('popular', this)">Popular</a></li>
+                        <li class="nav-item"><a href="#" class="text-black" onclick="showList('historic', this)">Historic</a></li>
+                        <li class="nav-item"><a href="#" class="text-black" onclick="showList('coastal', this)">Coastal</a></li>
+                        <li class="nav-item"><a href="#" class="text-black" onclick="showList('islands', this)">Islands</a></li>
+                        <li class="nav-item"><a href="#" class="text-black" onclick="showList('lakes', this)">Lakes</a></li>
+                        <li class="nav-item"><a href="#" class="text-black" onclick="showList('unique-stays', this)">Unique stays</a></li>
+                        <li class="nav-item"><a href="#" class="text-black" onclick="showList('categories', this)">Categories</a></li>
+                        <li class="nav-item"><a href="#" class="text-black" onclick="showList('things-to-do', this)">Things to do</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Placeholder for Lists -->
+            <div id="list-container" class="mt-8 grid grid-cols-2 md:grid-cols-4 gap-4">
+                <!-- Popular List -->
+                <div id="popular" class="list hidden">
+                    <ul class="flex grid grid-cols-2 md:grid-cols-4 gap-10">
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        <li>
+                            <h5>berlin</h5>
+                            <p>flat rentals</p>
+                        </li>
+                        
+                    </ul>
+                    <button class="toggle-button mt-4 bg-blue-500 text-white py-2 px-4 rounded" onclick="toggleList(this)">Show More</button>
+                </div>
+                <!-- Historic List -->
+                <div id="historic" class="list hidden">
+                    <ul class="flex flex-wrap space-x-4">
+                        ${Array.from({ length: 48 }, (_, i) => `<li class="w-1/6 mb-2 ${i >= 16 ? 'hidden' : ''}">Historic Item ${i + 1}</li>`).join('')}
+                    </ul>
+                    <button class="toggle-button mt-4 bg-blue-500 text-white py-2 px-4 rounded" onclick="toggleList(this)">Show More</button>
+                </div>
+                <!-- Coastal List -->
+                <div id="coastal" class="list hidden">
+                    <ul class="flex flex-wrap space-x-4">
+                        ${Array.from({ length: 48 }, (_, i) => `<li class="w-1/6 mb-2 ${i >= 16 ? 'hidden' : ''}">Coastal Item ${i + 1}</li>`).join('')}
+                    </ul>
+                    <button class="toggle-button mt-4 bg-blue-500 text-white py-2 px-4 rounded" onclick="toggleList(this)">Show More</button>
+                </div>
+                <!-- Islands List -->
+                <div id="islands" class="list hidden">
+                    <ul class="flex flex-wrap space-x-4">
+                        ${Array.from({ length: 48 }, (_, i) => `<li class="w-1/6 mb-2 ${i >= 16 ? 'hidden' : ''}">Islands Item ${i + 1}</li>`).join('')}
+                    </ul>
+                    <button class="toggle-button mt-4 bg-blue-500 text-white py-2 px-4 rounded" onclick="toggleList(this)">Show More</button>
+                </div>
+                <!-- Lakes List -->
+                <div id="lakes" class="list hidden">
+                    <ul class="flex flex-wrap space-x-4">
+                        ${Array.from({ length: 48 }, (_, i) => `<li class="w-1/6 mb-2 ${i >= 16 ? 'hidden' : ''}">Lakes Item ${i + 1}</li>`).join('')}
+                    </ul>
+                    <button class="toggle-button mt-4 bg-blue-500 text-white py-2 px-4 rounded" onclick="toggleList(this)">Show More</button>
+                </div>
+                <!-- Unique Stays List -->
+                <div id="unique-stays" class="list hidden">
+                    <ul class="flex flex-wrap space-x-4">
+                        ${Array.from({ length: 48 }, (_, i) => `<li class="w-1/6 mb-2 ${i >= 16 ? 'hidden' : ''}">Unique Stay ${i + 1}</li>`).join('')}
+                    </ul>
+                    <button class="toggle-button mt-4 bg-blue-500 text-white py-2 px-4 rounded" onclick="toggleList(this)">Show More</button>
+                </div>
+                <!-- Categories List -->
+                <div id="categories" class="list hidden">
+                    <ul class="flex flex-wrap space-x-4">
+                        ${Array.from({ length: 48 }, (_, i) => `<li class="w-1/6 mb-2 ${i >= 16 ? 'hidden' : ''}">Category ${i + 1}</li>`).join('')}
+                    </ul>
+                    <button class="toggle-button mt-4 bg-blue-500 text-white py-2 px-4 rounded" onclick="toggleList(this)">Show More</button>
+                </div>
+                <!-- Things to Do List -->
+                <div id="things-to-do" class="list hidden">
+                    <ul class="flex flex-wrap space-x-4">
+                        ${Array.from({ length: 48 }, (_, i) => `<li class="w-1/6 mb-2 ${i >= 16 ? 'hidden' : ''}">Thing to Do ${i + 1}</li>`).join('')}
+                    </ul>
+                    <button class="toggle-button mt-4 bg-blue-500 text-white py-2 px-4 rounded" onclick="toggleList(this)">Show More</button>
+                </div>
+            </div>
+        </div>
+        <!-- Grid Layout for Support, Hosting, and Airbnb -->
+        <div class="container mx-auto px-4 border-t border-b border-gray-200 mt-8">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mt-8">
+                <!-- Support Section -->
+                <div class="mb-8 md:mb-0">
+                    <h3 class="mb-4 font-semibold">Support</h3>
+                    <ul class="grid grid-cols-1 gap-2">
+                        <li><a href="#help-centre" class="text-black footer-link">Help Centre</a></li>
+                        <li><a href="#aircover" class="text-black footer-link">AirCover</a></li>
+                    </ul>
+                </div>
+                <!-- Hosting Section -->
+                <div class="mb-8 md:mb-0">
+                    <h3 class="mb-4 font-semibold">Hosting</h3>
+                    <ul class="grid grid-cols-1 gap-2">
+                        <li><a href="#airbnb-your-home" class="text-black footer-link">Airbnb your home</a></li>
+                        <li><a href="#aircover-for-hosts" class="text-black footer-link">AirCover for Hosts</a></li>
+                    </ul>
+                </div>
+                <!-- Airbnb Section -->
+                <div>
+                    <h3 class="mb-4 font-semibold">Airbnb</h3>
+                    <ul class="grid grid-cols-1 gap-2">
+                        <li><a href="#newsroom" class="text-black footer-link">Newsroom</a></li>
+                        <li><a href="#new-features" class="text-black footer-link">New features</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script>
+        function showList(listId, element) {
+            // Hide all lists
+            document.querySelectorAll('#list-container .list').forEach(div => div.classList.add('hidden'));
+            // Show the selected list
+            document.getElementById(listId).classList.remove('hidden');
+
+            // Remove 'active' class from all nav items
+            document.querySelectorAll('.nav-item').forEach(item => item.classList.remove('active'));
+
+            // Add 'active' class to the clicked nav item
+            element.parentElement.classList.add('active');
+        }
+
+        function toggleList(button) {
+            const list = button.previousElementSibling;
+            const items = list.children;
+            const hiddenItems = Array.from(items).slice(16);
+
+            hiddenItems.forEach(item => item.classList.toggle('hidden'));
+
+            if (button.textContent === 'Show More') {
+                button.textContent = 'Show Less';
+            } else {
+                button.textContent = 'Show More';
+            }
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            document.querySelectorAll('.list ul').forEach(list => {
+                Array.from(list.children).slice(16).forEach(item => item.classList.add('hidden'));
+            });
+        });
+    </script>
   </body>
 </html>
