added the href in popular

--- a/index.html
+++ b/index.html
@@ -2073,7 +2073,7 @@
       <div class="d-nav-container">
       <ul class="flex flex-col md:flex-row md:flex-wrap space-y-2 md:space-y-0 md:space-x-4">
       <li class="d-nav-item"><a href="#" class="text-black"
-      onclick="showList('popular', this)">Popular</a></li>
+      onclick="showList('popular', this);return false;">Popular</a></li>
       <li class="d-nav-item"><a href="#" class="text-black"
       onclick="showList('historic', this)">Historic</a></li>
       <li class="d-nav-item"><a href="#" class="text-black"
