changed main content, footer css  and class name on header

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </a>
 			</div>
 
-      <div class="nav">
+      <div class="i-nav">
         <button type="submit" class="nav-button">
           <span>Stays</span>
         </button>
