--- a/index.html
+++ b/index.html
@@ -2080,7 +2080,7 @@
       onclick="showList('coastal', this);return false;">Coastal</a></li>
       <li class="d-nav-item"><a href="#" class="text-black"
       onclick="showList('islands', this);return false;">Islands</a></li>
-      <li class="d-nav-item"><a href="#" class="text-black" onclick="showList('lakes', this)">Lakes</a>
+      <li class="d-nav-item"><a href="#" class="text-black" onclick="showList('lakes', this);return false;">Lakes</a>
       </li>
       <li class="d-nav-item"><a href="#" class="text-black"
       onclick="showList('unique-stays', this);return false;">Unique stays</a></li>
